Fixed spacing on certain devices

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ p{
     padding: 15px;
     color: black;
     border-radius: 15px;
+    margin-bottom: 100px;
 }
 
 .hidden{
